objects/vlocity_ins__ProfilingSegmentCategory__c.object
<CustomObject>
    <description>Profiling Segment Category. Grouping of profiling segments.(similiar to Tag grouping)</description>
    <fields>
        <fullName>vlocity_ins__ApplicableTypes__c</fullName>
        <description>Object types to which ,this category applies to.</description>
        <label>Applicable Types</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Any</fullName>
                    <default>true</default>
                    <label>Any</label>
                </value>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>ContentVersion</fullName>
                </value>
                <value>
                    <fullName>Campaign</fullName>
                </value>
                <value>
                    <fullName>Product2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__Code__c</fullName>
        <description>Segment Category Code</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Code</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>vlocity_ins__ColorCode__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ColorCode</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Description__c</fullName>
        <description>Segment Category Description</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DisplaySequence__c</fullName>
        <description>Display sequence of this category</description>
        <label>Sequence</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>vlocity_ins__LockedFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Locked flag will allow/prevent addition of new tags to this category,via Tags UI. But tags can be added via admin UI</description>
        <label>Locked Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__UIControlType__c</fullName>
        <label>UI Control Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>On-Off</fullName>
                    <default>true</default>
                    <label>On-Off</label>
                </value>
                <value>
                    <fullName>3-state</fullName>
                </value>
                <value>
                    <fullName>1-5 scale</fullName>
                </value>
                <value>
                    <fullName>TextComment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Deprecated Profiling Segment Category</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deprecated Profiling Segment Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>